# drawbridge

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING_FIRMWARE.md  ISSUES.md  LICENSE  PULL_REQUEST_FIX_STRINGVIEW.md  PULL_REQUEST_HEADER_HARDENING.md  README.md  SipServer.ino  SipServerETH.ino  THIRD_PARTY_NOTICES.md  install.ps1  install.sh  main.cpp  partitions.csv  partitions_4mb.csv  quickstart.bat  quickstart.sh  readme.md  sdkconfig.defaults  sdkconfig.defaults.esp32_constrained  smoketest.ps1  tests_addition.txt
.github/PR_NOTES/: fix-cppcheck-warnings.md
.github/workflows/: ci.yml  release.yml
.smoke/: capture.py  capture_noreset.py  gen_provision_nvs.py  multicall_uac.py  office_smoke.py  sip_probe.py  ssh_probe_nopty.py  ssh_test.py  ssh_tui.py  ssh_tui_digest.py  ssh_tui_host.py
cmake/: armv7-linux-musleabihf.cmake  patch_wolfssl.py
components/littlessh/: idf_component.yml
components/littlessh/include/: littlessh.h
components/littlessh/src/: littlessh.c
docs/: API.md  API_TESTS.md  ARCHITECTURE.md  AUDIT_REPORT.md  BENCHMARKS.md  CODE_REVIEW.md  CONTRIBUTING.md  DRAWBRIDGE.md  ETH_SMOKE.md  EXTENSION_SETUP.md  FEATURE_ROADMAP.md  FLASHING.md  HARDWARE.md  HARDWARE_SELECTION.md  INCIDENT_PLAYBOOK.md  LEARN_MODE.md  ONBOARDING.md  OPERATOR_ADMIN.md  OTA.md  PHONE_COMPATIBILITY.md  PROVISIONING.md  QUICKSTART.md  REALITY_CHECK.md  RTP.md  SBC_TRUNK.md  SCALING.md  SECURITY_AUDIT.md  SETUP_GUIDE.md  SYSOP_MANUAL.md  THREAT_MODEL.md  TROUBLESHOOTING.md  app.js  index.html  style.css
docs/design/: 00-brief.md  README.md  accessibility.md  brand.md  imagery.md  narrative.md  personas.md  tui-ia.md  tui-style.md  walkthrough.md  whimsy.md
drawbridge-conference-mixer/: CONFERENCE_MIXER.md
drawbridge-conference-mixer/src/: MixBus.cpp  MixBus.hpp  mix_kernels.h  mix_kernels_scalar.cpp
drawbridge-conference-mixer/src/pie/: mix_sum4_s16.S
drawbridge-conference-mixer/test/: PlayoutBuffer.hpp  mixbus_selftest.cpp
main/: CMakeLists.txt  esp_main.cpp  esp_main_display.cpp  esp_main_eth.cpp  esp_main_eth_lan8720.cpp  host_compat.h  idf_component.yml  ntp_time.c  ntp_time.h  pd_mdns.h
main/drivers/: esp_lcd_axs15231b.c  esp_lcd_axs15231b.h
main/ui/: qrcode.h  ui.cpp  ui.h
main/wifi/: DnsServer.cpp  DnsServer.hpp
sketches/AXS15231B_CanvasTest/: AXS15231B_CanvasTest.ino
sketches/MinimalTest/: MinimalTest.ino
sketches/PinFuzzer/: PinFuzzer.ino
sketches/SipServer/: SipServer.ino
sketches/SipServerETH/: SipServerETH.ino
sketches/SipServer_JC3248W535/: HttpServer.cpp  HttpServer.hpp  IPHelper.hpp  RequestsHandler.cpp  RequestsHandler.hpp  Session.cpp  SipClient.cpp  SipClient.hpp  SipMessage.hpp  SipSdpMessage.hpp  SipServer.cpp  SipServer_JC3248W535.ino  UdpServer.cpp  UdpServer.hpp  index_html.h
sketches/SipServer_T_ETH_Lite_W5500/: SipServer_T_ETH_Lite_W5500.ino
sketches/SipServer_T_POE_Pro_LAN8720/: SipServer_T_POE_Pro_LAN8720.ino
src/Helpers/: AdminAuth.cpp  AdminAuth.hpp  ArpLookup.cpp  ArpLookup.hpp  HttpServer.cpp  HttpServer.hpp  IDGen.hpp  JsonEscape.hpp  LogQueue.hpp  OtaUpdater.cpp  OtaUpdater.hpp  SipDigest.cpp  SipDigest.hpp  SipSecretStore.cpp  SipSecretStore.hpp  SshServer.cpp  SshServer.hpp  SshServerLittlessh.cpp  Syslog.cpp  Syslog.hpp  Tui.cpp  Tui.hpp  UdpServer.cpp  UdpServer.hpp  UrlEncode.hpp  index_html.h
src/SIP/: AnchorClient.hpp  CallDetailRecord.hpp  LoopbackAnchorClient.cpp  LoopbackAnchorClient.hpp  MediaBridge.cpp  MediaBridge.hpp  PbxConfig.hpp  PlayoutBuffer.cpp  PlayoutBuffer.hpp  PoolConfig.hpp  PsramTask.hpp  RequestsHandler.cpp  RequestsHandler.hpp  RtpReceiver.cpp  RtpReceiver.hpp  RtpSender.cpp  RtpSender.hpp  Session.cpp  Session.hpp  SipClient.cpp  SipClient.hpp  SipMessage.cpp  SipMessage.hpp  SipMessageFactory.cpp  SipMessageHeaders.h  SipMessageTypes.h  SipSdpMessage.cpp  SipSdpMessage.hpp  SipServer.cpp  SipServer.hpp  SipStatus.cpp  SipStatus.hpp  TelephonyApiConfig.cpp  TelephonyApiConfig.hpp  TelephonyProvider.cpp  TelephonyProvider.hpp  ThreeCxAnchorClient.cpp  ThreeCxAnchorClient.hpp  ThreeCxAnchorLogic.hpp
tests/: AdminAuthLockout_test.cpp  AdminAuth_test.cpp  AdminHttpGate_test.cpp  ArpLookup_test.cpp  BeepTeardown_test.cpp  CMakeLists.txt  Hold_test.cpp  InviteAuth_test.cpp  JsonEscape_test.cpp  Metrics_test.cpp  NvsWriteback_test.cpp  OtaUpdater_test.cpp  PageZone_test.cpp  Park_test.cpp  Pbx_test.cpp  PlayoutBuffer_test.cpp  PoolSafety_test.cpp  Refer_test.cpp  RtpReceiver_test.cpp  Rtp_test.cpp  SessionTimer_test.cpp  SipDigest_test.cpp  SipMessage_header_test.cpp  SipMessage_test.cpp  SipStatus_test.cpp  Syslog_test.cpp  Teardown_test.cpp  TelephonyApi_test.cpp  ThreeCxAnchorLogic_test.cpp  Transaction_test.cpp  Tui_test.cpp  Update_test.cpp  UrlEncode_test.cpp
tests/ci/: deployment_audit.sh  deployment_audit_allow.txt  partition_guard.py  test_deployment_audit.sh  test_partition_guard.sh
tests/http/: test_api.sh
tests/load/: STRESS_FINDINGS.md  sip_stress.py
