# Select transport: "wifi" for SoftAP mode, "eth" for W5500 Ethernet (PoE),
#   "lan8720" for internal-EMAC LAN8720 Ethernet (LilyGO T-Internet-COM, classic ESP32),
#   "display" for Guition AXS15231B Display
# Override at build time:  idf.py -D SIP_TRANSPORT=display build
# NOTE: lan8720 requires the classic ESP32 (has the internal EMAC):  idf.py set-target esp32
if(NOT DEFINED SIP_TRANSPORT)
    set(SIP_TRANSPORT "eth")      # default to W5500 Ethernet (LilyGO T-ETH-ELITE pins; see PD_ETH_BOARD)
endif()

set(ADDITIONAL_SRCS "")

if(IDF_VERSION_MAJOR GREATER_EQUAL 6)
    set(IDF_V6_DRIVERS esp_driver_gpio esp_driver_spi esp_driver_i2c)
else()
    set(IDF_V6_DRIVERS driver)
endif()

if(SIP_TRANSPORT STREQUAL "eth")
    set(MAIN_SRC "esp_main_eth.cpp")
    # The headless Ethernet box needs the SSH sysop terminal most (no screen), but
    # it uses the lightweight littlessh backend (PSA/mbedTLS) appended below for all
    # non-display transports — NOT wolfSSH. wolfSSH stays display-only.
    if(IDF_VERSION_MAJOR GREATER_EQUAL 6)
        set(EXTRA_REQUIRES esp_eth espressif__w5500 ${IDF_V6_DRIVERS})
    else()
        set(EXTRA_REQUIRES esp_eth ${IDF_V6_DRIVERS})
    endif()
    # W5500 boards differ only in their SPI pin map. Select with -D PD_ETH_BOARD=<board>:
    #   elite     → LilyGO T-ETH-ELITE S3 (default; the board on the bench)
    #   waveshare → Waveshare ESP32-S3-ETH (PoE)
    # esp_main_eth.cpp picks the pins from the PD_ETH_BOARD_* define emitted below.
    if(NOT DEFINED PD_ETH_BOARD)
        set(PD_ETH_BOARD "elite")
    endif()
    if(PD_ETH_BOARD STREQUAL "elite")
        set(ETH_BOARD_DEF "PD_ETH_BOARD_ELITE")
    elseif(PD_ETH_BOARD STREQUAL "waveshare")
        set(ETH_BOARD_DEF "PD_ETH_BOARD_WAVESHARE")
    else()
        message(FATAL_ERROR "Unknown PD_ETH_BOARD='${PD_ETH_BOARD}' — use 'elite' or 'waveshare'")
    endif()
    message(STATUS "SipServer transport: W5500 Ethernet — board: ${PD_ETH_BOARD}")
elseif(SIP_TRANSPORT STREQUAL "lan8720")
    # LilyGO T-Internet-COM: classic ESP32 internal EMAC + external LAN8720 PHY (RMII).
    # Internal EMAC is built into esp_eth; the PHY power pin needs gpio. IDF v6.0 moved
    # the chip-specific PHY drivers out of esp_eth, so the LAN87xx driver now comes from
    # the espressif/lan87xx managed component (see idf_component.yml). On v5.x esp_eth
    # still ships esp_eth_phy_new_lan87xx, so the extra REQUIRES is only needed on v6+.
    set(MAIN_SRC "esp_main_eth_lan8720.cpp")
    if(IDF_VERSION_MAJOR GREATER_EQUAL 6)
        set(EXTRA_REQUIRES esp_eth espressif__lan87xx ${IDF_V6_DRIVERS})
    else()
        set(EXTRA_REQUIRES esp_eth ${IDF_V6_DRIVERS})
    endif()
    message(STATUS "SipServer transport: LAN8720 Ethernet (internal EMAC / RMII, classic ESP32)")
elseif(SIP_TRANSPORT STREQUAL "display")
    set(MAIN_SRC "esp_main_display.cpp")
    # wolfssl__wolfssl + wolfssl__wolfssh provide the SSH console (POCKETDIAL_HAS_WOLFSSH,
    # set below). They are display-only so they live in EXTRA_REQUIRES, not the base REQUIRES.
    set(EXTRA_REQUIRES esp_lcd espressif__esp_lcd_touch lvgl__lvgl esp_driver_ledc
        wolfssl__wolfssl wolfssl__wolfssh ${IDF_V6_DRIVERS})
    set(ADDITIONAL_SRCS "drivers/esp_lcd_axs15231b.c" "ui/ui.cpp" "ui/qrcode.c" "wifi/DnsServer.cpp")
    message(STATUS "SipServer transport: Guition AXS15231B Touch Display (LVGL)")
else()
    set(MAIN_SRC "esp_main.cpp")
    if(IDF_VERSION_MAJOR GREATER_EQUAL 6)
        set(EXTRA_REQUIRES ${IDF_V6_DRIVERS})
    else()
        set(EXTRA_REQUIRES "")
    endif()
    message(STATUS "SipServer transport: WiFi SoftAP")
endif()

# littlessh SSH console for transports that don't link wolfSSH (eth/wifi/lan8720).
# The display transport keeps wolfSSH (POCKETDIAL_HAS_WOLFSSH, set below).
if(NOT SIP_TRANSPORT STREQUAL "display")
    list(APPEND EXTRA_REQUIRES littlessh)
endif()

idf_component_register(SRCS ${MAIN_SRC}
                            ${ADDITIONAL_SRCS}
                            "ntp_time.c"
                            "../src/Helpers/UdpServer.cpp"
                            "../src/Helpers/HttpServer.cpp"
                            "../src/Helpers/AdminAuth.cpp"
                            "../src/Helpers/SipDigest.cpp"
                            "../src/Helpers/SipSecretStore.cpp"
                            "../src/Helpers/ArpLookup.cpp"
                            "../src/Helpers/SshServer.cpp"
                            "../src/Helpers/SshServerLittlessh.cpp"
                            "../src/Helpers/Tui.cpp"
                            "../src/Helpers/OtaUpdater.cpp"
                            "../src/SIP/RequestsHandler.cpp"
                            "../src/SIP/Session.cpp"
                            "../src/SIP/SipClient.cpp"
                            "../src/SIP/SipMessage.cpp"
                            "../src/SIP/SipMessageFactory.cpp"
                            "../src/SIP/SipSdpMessage.cpp"
                            "../src/SIP/SipServer.cpp"
                            "../src/SIP/SipStatus.cpp"
                            "../src/SIP/RtpSender.cpp"
                            "../src/SIP/RtpReceiver.cpp"
                            "../src/SIP/ThreeCxAnchorClient.cpp"
                            "../src/SIP/LoopbackAnchorClient.cpp"
                            "../src/SIP/MediaBridge.cpp"
                            "../src/SIP/PlayoutBuffer.cpp"
                            "../src/SIP/TelephonyApiConfig.cpp"
                            "../src/SIP/TelephonyProvider.cpp"
                    INCLUDE_DIRS "../src/Helpers" "../src/SIP" "drivers" "ui" "wifi"
                    REQUIRES nvs_flash lwip esp_netif esp_event freertos mdns app_update esp_driver_ledc console esp_timer esp_websocket_client esp_http_client cjson mbedtls ${EXTRA_REQUIRES}
                    PRIV_REQUIRES esp_wifi)

# SshServer.cpp initializes esp_console_cmd_t arrays with only the fields it uses (the
# ESP-IDF console convention; trailing members default to 0). Under -Wextra that trips
# -Werror=missing-field-initializers. Demote it for this file only — same approach the
# display build already uses for esp_main_display.cpp and qrcode.c.
set_source_files_properties("../src/Helpers/SshServer.cpp" "../src/Helpers/SshServerLittlessh.cpp"
    PROPERTIES COMPILE_FLAGS "-Wno-error=missing-field-initializers")

# Issue #49: the display transport reserves Core 1 for the LVGL graphics task and
# runs the SIP engine on Core 0, so the UDP receiver (which carries SIP signaling)
# must stay on Core 0. The SoftAP/Ethernet transports run SIP on Core 1 and use the
# UdpServer default (Core 1).
# Pure-Ethernet transports (W5500 "eth" and LAN8720 "lan8720") have no WiFi at all,
# so they must NOT define POCKETDIAL_HAS_WIFI.
if(NOT SIP_TRANSPORT STREQUAL "eth" AND NOT SIP_TRANSPORT STREQUAL "lan8720")
    target_compile_definitions(${COMPONENT_LIB} PRIVATE POCKETDIAL_HAS_WIFI)
endif()

# littlessh SSH backend (PSA/mbedTLS) for non-display transports, which don't link
# wolfSSH. display keeps the wolfSSH console (POCKETDIAL_HAS_WOLFSSH, set below).
if(NOT SIP_TRANSPORT STREQUAL "display")
    target_compile_definitions(${COMPONENT_LIB} PRIVATE POCKETDIAL_HAS_LITTLESSH)
endif()

# W5500 board pin-map selector (see the eth branch above). Drives the #if in
# esp_main_eth.cpp; absent the define, that file falls back to the Elite pins.
if(SIP_TRANSPORT STREQUAL "eth")
    target_compile_definitions(${COMPONENT_LIB} PRIVATE ${ETH_BOARD_DEF})
endif()

# Board name string shown on the About screen — detected from transport + board vars
# so the UI is honest about the specific hardware without hardcoding in Tui.cpp.
if(SIP_TRANSPORT STREQUAL "eth")
    if(PD_ETH_BOARD STREQUAL "elite" OR NOT DEFINED PD_ETH_BOARD)
        set(_PD_BOARD_NAME "LilyGO T-ETH-ELITE PoE")
    elseif(PD_ETH_BOARD STREQUAL "waveshare")
        set(_PD_BOARD_NAME "Waveshare PoE-ETH-S3")
    else()
        set(_PD_BOARD_NAME "W5500 Ethernet")
    endif()
elseif(SIP_TRANSPORT STREQUAL "lan8720")
    set(_PD_BOARD_NAME "ESP32 LAN8720")
elseif(SIP_TRANSPORT STREQUAL "display")
    set(_PD_BOARD_NAME "Guition JC3248W535")
elseif(SIP_TRANSPORT STREQUAL "wifi")
    set(_PD_BOARD_NAME "ESP32-S3 Wi-Fi")
else()
    set(_PD_BOARD_NAME "ESP32-S3")
endif()
target_compile_definitions(${COMPONENT_LIB} PRIVATE
    "POCKETDIAL_BOARD_NAME=\"${_PD_BOARD_NAME}\"")

# Re-apply the wolfSSL ESP-IDF-v6.0.1 compatibility patches to the freshly fetched
# (git-ignored) managed component. The wolfssl/wolfssh deps in idf_component.yml are
# fetched for EVERY transport (the component manager's rules: can't gate on the custom
# SIP_TRANSPORT var), so the patch must run unconditionally — otherwise eth/wifi/lan8720
# builds would compile an unpatched wolfSSL and fail. The script is idempotent and a
# no-op when wolfSSL isn't present. It runs at configure time so the patched sources
# exist before the wolfssl/wolfssh components compile. See cmake/patch_wolfssl.py for the
# three fixes (NO_ESP32_CRYPT software crypto, ESP_ENABLE_WOLFSSH, C23 'thread_local'
# enum rename) and why each is needed on IDF v6.
find_package(Python3 COMPONENTS Interpreter QUIET)
if(NOT Python3_EXECUTABLE)
    set(Python3_EXECUTABLE "python")
endif()
execute_process(
    COMMAND "${Python3_EXECUTABLE}"
            "${CMAKE_HOME_DIRECTORY}/cmake/patch_wolfssl.py"
            "${CMAKE_HOME_DIRECTORY}/managed_components"
    RESULT_VARIABLE _wolfssl_patch_rc)
if(NOT _wolfssl_patch_rc EQUAL 0)
    message(FATAL_ERROR "patch_wolfssl.py failed (rc=${_wolfssl_patch_rc}); "
                        "wolfSSL will not build on ESP-IDF v6 without it.")
endif()

# The wolfSSH SSH sysop console — DISPLAY build only. SshServer.cpp compiles its full
# wolfSSH path (instead of the idle stub) when POCKETDIAL_HAS_WOLFSSH is defined. The
# non-display transports (eth/wifi/lan8720) use the lighter littlessh backend instead
# (POCKETDIAL_HAS_LITTLESSH, set above) so they never link wolfSSL/wolfSSH. The
# wolfssl/wolfssh managed components are forced to SOFTWARE crypto (NO_ESP32_CRYPT) so
# they build on ESP-IDF v6.0.1. WOLFSSL_USER_SETTINGS makes wolfssh/ssh.h pull
# wolfssl/wolfcrypt/settings.h -> user_settings.h (the component config) instead of the
# autotools-only wolfssl/options.h, which does not exist in a user_settings build.
if(SIP_TRANSPORT STREQUAL "display")
    target_compile_definitions(${COMPONENT_LIB} PRIVATE POCKETDIAL_HAS_WOLFSSH WOLFSSL_USER_SETTINGS)
endif()

if(SIP_TRANSPORT STREQUAL "display")
    target_compile_definitions(${COMPONENT_LIB} PRIVATE POCKETDIAL_UDP_RX_CORE=0)
    # qrcode.c (ricmoo QRCode, vendored): uses #pragma mark (an Xcode-ism) GCC flags as an
    # unknown pragma, plus an `x < 0` guard on an unsigned arg that -Wtype-limits reports
    # as always-false. Both are harmless in this third-party file; demote to warnings.
    set_source_files_properties("ui/qrcode.c" PROPERTIES COMPILE_FLAGS "-Wno-error=unknown-pragmas -Wno-error=type-limits")
    # esp_main_display.cpp builds the AXS15231B panel-IO configs through the driver's
    # partial designated-initializer macros (the IDF convention); under C++ -Wextra the
    # unset trailing flag fields trip -Werror=missing-field-initializers. Demote it.
    set_source_files_properties("esp_main_display.cpp" PROPERTIES COMPILE_FLAGS "-Wno-error=missing-field-initializers")
endif()

# Resource-constrained profile: shrink the pre-allocated SIP object pools to fit a
# low-RAM classic ESP32 (ESP32-WROOM, 520KB SRAM, no PSRAM). The message pool is the
# heaviest consumer (one std::string buffer per slot), so it gets cut the most.
# These override the #ifndef defaults in src/SIP/PoolConfig.hpp (32/8/32).
# Pair with sdkconfig.defaults.esp32_constrained + partitions_4mb.csv:
#   idf.py -D SIP_TRANSPORT=lan8720 -D SIP_CONSTRAINED=1 \
#          -DSDKCONFIG_DEFAULTS="sdkconfig.defaults;sdkconfig.defaults.esp32_constrained" \
#          set-target esp32 build
if(SIP_CONSTRAINED)
    target_compile_definitions(${COMPONENT_LIB} PRIVATE
        POCKETDIAL_MAX_CLIENTS=8
        POCKETDIAL_MAX_SESSIONS=4
        POCKETDIAL_MSG_POOL=8)
    message(STATUS "SipServer profile: RESOURCE-CONSTRAINED (clients=8 sessions=4 msgpool=8)")
endif()
